--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="popup.css">
     </head>
     <body>
         <button id="normal_action">重複タブを削除</button>
