line up by domain

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <button id="normal_action">重複タブを削除</button>
+        <button id="range_tabs">タブを並び替える</button>
         <p></p>
         URLに以下の文字列を含むタブを<br>
         <input id="designate" type="text"><br>
