--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,13 @@
             <input type="checkbox" id="target_all_windows" name="target_all_windows">
             <label for="target_all_windows">全ウィンドウを対象</label>
         </div>
-        <button id="normal_action">重複タブを削除</button>
-        <button id="range_tabs">タブを並び替える</button>
+        <div class="button_container">
+            <button id="normal_action">重複タブを削除</button>
+            <button id="range_tabs">タブを並び替える</button>
+        </div>
         <p>URLに以下の文字列を含むタブを</p>
         <input id="designate" type="text"><br>
-        <div class="button_wrapper">
+        <div class="flex_container">
             <button id="designate_delete">削除</button>
         </div>
         <hr>
