--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="popup.css">
+        <link rel="stylesheet" href="css/popup.css">
     </head>
     <body>
         <div>
@@ -23,7 +23,6 @@
             <p>ドメインを指定して削除</p>
             <div id="domains"></div>
         </div>
-        <!-- <button id="except_remain">残す</button> -->
         <script src="popup.js"></script>
     </body>
 </html>
