white list delete

--- a/src/popup.html
+++ b/src/popup.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="screen_whitelist_block">
+    <div id="screen_whitelist_block" style="display: none">
       <div class="container mb-5">
         <p class="px-3 pb-5">消したくないタブのURLを設定できます。</p>
         <div class="columns is-mobile ml-1 is-flex is-align-items-center">
@@ -82,7 +82,7 @@
             <span class="tag is-warning mr-2">https://codepen.io/</span>
             <button class="delete"></button>
           </div>
-          <div class="is-flex is-align-items-center mb-1">
+          <div class="is-flex is-align-items-center mb-1 white_list_card">
             <span class="tag is-warning mr-2">White List</span>
             <button class="delete"></button>
           </div>
