--- a/src/popup.html
+++ b/src/popup.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="screen_console_block">
-      <div class="container p-4">
+      <div class="container px-4 pb-4">
         <div class="container mb-2">
           <label class="checkbox">
             <input type="checkbox" id="target_all_windows" />
