--- a/src/popup.html
+++ b/src/popup.html
@@ -77,16 +77,7 @@
             追加
           </button>
         </div>
-        <div class="box mx-3 white_list_borad" id="white_list">
-          <div class="is-flex is-align-items-center mb-1 white_list_card">
-            <span class="tag is-warning mr-2">https://codepen.io/</span>
-            <button class="delete"></button>
-          </div>
-          <div class="is-flex is-align-items-center mb-1 white_list_card">
-            <span class="tag is-warning mr-2">White List</span>
-            <button class="delete"></button>
-          </div>
-        </div>
+        <div class="box mx-3 white_list_borad" id="white_list"></div>
       </div>
     </div>
     <script src="popup.js"></script>
