--- a/src/popup.html
+++ b/src/popup.html
@@ -68,7 +68,7 @@
             id="white_list_input"
             class="input column mr-3 is-small is-6"
             type="text"
-            placeholder="domainを入力"
+            placeholder="URLを入力"
           />
           <button
             id="add_white_list"
