--- a/src/popup.html
+++ b/src/popup.html
@@ -84,29 +84,7 @@
 
     <div id="screen_history_block" style="display: none">
       <div class="container">
-        <h4>履歴</h4>
-        <ul class="menu-list">
-          <li class="history_link">
-            <a
-              target="_blank"
-              class="history_link"
-              href="https://bulma.io/documentation/helpers/color-helpers/"
-              >https://bulma.io/documentation/helpers/color-helpers/</a
-            >
-          </li>
-          <li class="history_link">
-            <a
-              class="history_link"
-              href="https://bulma.io/documentation/helpers/color-helpers/"
-              >https://bulma.io/documentation/helpers/color-helpers/</a
-            >
-          </li>
-          <li class="history_link">
-            <a class="history_link"
-              >https://bulma.io/documentation/helpers/color-helpers/</a
-            >
-          </li>
-        </ul>
+        <ul class="menu-list" id="history_list"></ul>
       </div>
     </div>
     <script src="popup.js"></script>
