--- a/src/popup.html
+++ b/src/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/bulma.min.css" />
     <link rel="stylesheet" href="css/popup.css" />
+    <script defer src="icon/all.min.js"></script>
   </head>
   <body class="has-background-white">
     <div class="container p-4 has-background-primary-dark">
