--- a/src/popup.html
+++ b/src/popup.html
@@ -7,8 +7,44 @@
     <script defer src="icon/all.min.js"></script>
   </head>
   <body class="has-background-white">
-    <div class="container p-4 has-background-primary-dark">
-      <h1 class="title has-text-light">Tab Killer</h1>
+    <div
+      class="
+        container
+        p-4
+        has-background-primary-dark
+        is-flex is-align-items-center is-justify-content-space-between
+      "
+    >
+      <div class="header_title is-flex-shrink-0">
+        <h1 class="title has-text-light">Tab Killer</h1>
+      </div>
+      <div class="dropdown is-active" id="language_dropdown">
+        <div class="dropdown-trigger">
+          <button
+            class="button"
+            aria-haspopup="true"
+            aria-controls="dropdown-menu"
+          >
+            <span class="icon is-small">
+              <i class="fas fa-globe"></i>
+            </span>
+            <span>Language</span>
+            <span class="icon is-small">
+              <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </span>
+          </button>
+        </div>
+        <div
+          class="dropdown-menu language_dropdown_menu"
+          id="dropdown-menu"
+          role="menu"
+        >
+          <div class="dropdown-content">
+            <a href="#" class="dropdown-item is-active"> 日本語 </a>
+            <a class="dropdown-item"> English </a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="tabs mt-1" id="tab_zone">
