--- a/src/popup.html
+++ b/src/popup.html
@@ -124,6 +124,14 @@
           </button>
         </div>
         <div class="box mx-3 white_list_borad" id="white_list"></div>
+        <div class="is-flex is-justify-content-center">
+          <button
+            id="all_clear_button"
+            class="button is-danger is-small is-rounded is-outlined"
+          >
+            All Clear
+          </button>
+        </div>
       </div>
     </div>
 
