--- a/src/popup.html
+++ b/src/popup.html
@@ -123,6 +123,16 @@
             追加
           </button>
         </div>
+        <div class="columns is-mobile ml-3 pt-3 is-flex is-align-items-center">
+          <div class="buttons are-small">
+            <button id="add_present_URL_whitelist" class="button is-success is-outlined">
+              現在のページを追加
+            </button>
+            <button id="add_present_domain_whitelist" class="button is-success is-outlined">
+              現在のページのドメインを追加
+            </button>
+          </div>
+        </div>
         <div class="box mx-3 white_list_borad" id="white_list"></div>
         <div class="is-flex is-justify-content-center">
           <button
