language auto mode

--- a/src/popup.html
+++ b/src/popup.html
@@ -40,6 +40,9 @@
           role="menu"
         >
           <div class="dropdown-content">
+            <a class="dropdown-item language_dropdown_item" id="lang_auto">
+              Auto
+            </a>
             <a class="dropdown-item language_dropdown_item" id="lang_ja">
               日本語
             </a>
@@ -125,10 +128,16 @@
         </div>
         <div class="columns is-mobile ml-3 pt-3 is-flex is-align-items-center">
           <div class="buttons are-small">
-            <button id="add_present_URL_whitelist" class="button is-success is-outlined">
+            <button
+              id="add_present_URL_whitelist"
+              class="button is-success is-outlined"
+            >
               現在のページを追加
             </button>
-            <button id="add_present_domain_whitelist" class="button is-success is-outlined">
+            <button
+              id="add_present_domain_whitelist"
+              class="button is-success is-outlined"
+            >
               現在のページのドメインを追加
             </button>
           </div>
