rename whitelist all clear button

--- a/src/popup.html
+++ b/src/popup.html
@@ -145,7 +145,7 @@
         <div class="box mx-3 white_list_borad" id="white_list"></div>
         <div class="is-flex is-justify-content-center">
           <button
-            id="all_clear_button"
+            id="white_list_all_clear_button"
             class="button is-danger is-small is-rounded is-outlined"
           >
             All Clear
