--- a/src/popup.html
+++ b/src/popup.html
@@ -157,6 +157,14 @@
     <div id="screen_history_block" style="display: none">
       <div class="container">
         <ul class="menu-list" id="history_list"></ul>
+        <div class="is-flex is-justify-content-center my-2">
+          <button
+            id="history_all_clear_button"
+            class="button is-danger is-small is-rounded is-outlined"
+          >
+            All Clear
+          </button>
+        </div>
       </div>
     </div>
     <script type="module" src="js/popup.js"></script>
