--- a/src/popup.html
+++ b/src/popup.html
@@ -148,7 +148,7 @@
             id="white_list_all_clear_button"
             class="button is-danger is-small is-rounded is-outlined"
           >
-            All Clear
+            Clear List
           </button>
         </div>
       </div>
@@ -162,7 +162,7 @@
             id="history_all_clear_button"
             class="button is-danger is-small is-rounded is-outlined"
           >
-            All Clear
+            Clear History
           </button>
         </div>
       </div>
