--- a/src/popup.html
+++ b/src/popup.html
@@ -72,6 +72,7 @@
             <span id="target_all_windows_label">全ウィンドウを対象</span>
           </label>
         </div>
+        <hr class="divider_hr" />
         <div class="buttons are-small">
           <button id="normal_action" class="button is-success is-outlined">
             重複タブを削除
