--- a/src/popup.html
+++ b/src/popup.html
@@ -57,10 +57,20 @@
     <div class="tabs mt-1" id="tab_zone">
       <ul>
         <li class="is-active">
-          <a class="screen_switch" id="screen_console">Console</a>
+          <a class="screen_switch" id="screen_console">
+            <i class="fas fa-home mr-1"></i>Console</a
+          >
         </li>
-        <li><a class="screen_switch" id="screen_whitelist">White List</a></li>
-        <li><a class="screen_switch" id="screen_history">History</a></li>
+        <li>
+          <a class="screen_switch" id="screen_whitelist"
+            ><i class="fas fa-clipboard-list mr-1"></i>White List</a
+          >
+        </li>
+        <li>
+          <a class="screen_switch" id="screen_history"
+            ><i class="fas fa-history mr-1"></i>History</a
+          >
+        </li>
       </ul>
     </div>
 
