--- a/src/popup.html
+++ b/src/popup.html
@@ -17,7 +17,10 @@
       "
     >
       <div class="header_title is-flex-shrink-0">
-        <h1 class="title has-text-light">Tab Killer</h1>
+        <div class="is-flex is-align-items-center">
+          <img src="./images/128icon.png" alt="logo" width="30px" />
+          <h1 class="title has-text-light ml-3">Tab Killer</h1>
+        </div>
       </div>
       <div class="dropdown" id="language_dropdown">
         <div class="dropdown-trigger">
