--- a/src/popup.html
+++ b/src/popup.html
@@ -5,16 +5,10 @@
     <link rel="stylesheet" href="css/bulma.min.css" />
     <link rel="stylesheet" href="css/popup.css" />
     <script defer src="icon/all.min.js"></script>
-    <link rel="stylesheet" href="icon/phosphor.css" />
   </head>
   <body class="has-background-white">
     <div
-      class="
-        container
-        p-4
-        has-background-primary-dark
-        is-flex is-align-items-center is-justify-content-space-between
-      "
+      class="container p-4 has-background-primary-dark is-flex is-align-items-center is-justify-content-space-between"
     >
       <div class="header_title is-flex-shrink-0">
         <div class="is-flex is-align-items-center">
@@ -85,16 +79,6 @@
             <input type="checkbox" id="target_all_windows" />
             <span id="target_all_windows_label">全ウィンドウを対象</span>
           </label>
-          <i
-            class="ph-browser ph-2x ml-2"
-            style="color: hsl(171, 100%, 29%)"
-            id="one_window_icon"
-          ></i>
-          <i
-            class="ph-browsers ph-lg ml-2"
-            style="color: lightgrey"
-            id="all_windows_icon"
-          ></i>
         </div>
 
         <hr class="divider_hr" />
